# asciir

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs
tests/expected/: table.txt
